--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
 	"singleQuote": true,
 	"tabWidth": 2,
-	"useTabs": true
+	"useTabs": true,
+	"trailingComma": "es5",
+	"singleAttributePerLine": true
 }
