--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
 	},
 	"dependencies": {
 		"@astrojs/react": "^3.0.9",
+		"@astrojs/rss": "^4.0.2",
 		"@astrojs/solid-js": "^4.0.1",
 		"@nanostores/react": "^0.7.1",
 		"@nanostores/solid": "^0.4.2",
 		"astro": "^2.5.5",
+		"markdown-it": "^14.0.0",
 		"nanostores": "^0.9.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"sanitize-html": "^2.11.0",
 		"solid-js": "^1.8.10"
 	},
 	"devDependencies": {
