--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/netlify": "^5.0.1",
 		"@astrojs/react": "^3.0.9",
 		"@astrojs/rss": "^4.0.2",
 		"@astrojs/solid-js": "^4.0.1",
 		"@nanostores/react": "^0.7.1",
 		"@nanostores/solid": "^0.4.2",
-		"astro": "^2.5.5",
+		"astro": "^4.3.1",
 		"markdown-it": "^14.0.0",
 		"nanostores": "^0.9.5",
 		"react": "^18.2.0",
